[package]
name = "sozo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
camino.workspace = true
clap.workspace = true
clap_complete.workspace = true
dojo-client = { path = "../dojo-client" }
dojo-lang = { path = "../dojo-lang" }
dojo-world = { path = "../dojo-world" }
log.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-plugins.workspace = true
cairo-lang-project.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-test-runner.workspace = true
include_dir = "0.7.3"
scarb.workspace = true
scarb-metadata = "1.4.2"
semver.workspace = true
serde.workspace = true
console.workspace = true
serde_json.workspace = true
smol_str.workspace = true
starknet.workspace = true
tempfile = "3.6.0"
thiserror.workspace = true
tokio = { version = "1.15.0", features = ["full"] }
toml.workspace = true
url = "2.2.2"
clap-verbosity-flag = "2.0.1"
yansi.workspace = true
tracing.workspace = true
tracing-log = "0.1.3"
forge.workspace = true

# blockifier = { git = "https://github.com/starkware-libs/blockifier.git", rev = "9238b4d" }
# starknet_api = { git = "https://github.com/starkware-libs/starknet-api", rev = "a4c78ff" }
# cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo", rev = "f9e7b41" }
# cairo-lang-runner = { git = "https://github.com/starkware-libs/cairo", rev = "f9e7b41" }

regex = "1.9.1"

[dev-dependencies]
assert_fs = "1.0.10"
dojo-test-utils = { path = "../dojo-test-utils", features = ["build-examples"]}
snapbox = "0.4.6"
tokio = { version = "1.28.0", features = ["full"] }

[[bin]]
name = "sozo"
path = "src/main.rs"
