[package]
edition = "2021"
name = "sozo"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-plugins.workspace = true
cairo-lang-project.workspace = true
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-test-runner.workspace = true
camino.workspace = true
clap-verbosity-flag = "2.0.1"
clap.workspace = true
clap_complete.workspace = true
console.workspace = true
dojo-lang = { path = "../dojo-lang" }
dojo-world = { path = "../dojo-world" }
scarb-ui.workspace = true
scarb.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
smol_str.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
torii-client = { path = "../torii/client" }
tracing-log = "0.1.3"
tracing.workspace = true
url.workspace = true
notify-debouncer-mini = "0.3.0"
notify = "6.0.1"

[dev-dependencies]
assert_fs = "1.0.10"
dojo-test-utils = { path = "../dojo-test-utils", features = [ "build-examples" ] }
snapbox = "0.4.6"
