[package]
edition.workspace = true
name = "sozo"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-defs.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-plugins.workspace = true
cairo-lang-project.workspace = true
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-test-plugin.workspace = true
cairo-lang-test-runner.workspace = true
cairo-lang-utils.workspace = true
camino.workspace = true
clap-verbosity-flag = "2.0.1"
clap.workspace = true
clap_complete.workspace = true
console.workspace = true
dojo-lang = { path = "../dojo-lang" }
dojo-types = { path = "../dojo-types" }
dojo-world = { path = "../dojo-world", features = [ "contracts", "metadata", "migration" ] }
notify = "6.0.1"
notify-debouncer-mini = "0.3.0"
scarb-ui.workspace = true
scarb.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
smol_str.workspace = true
starknet-crypto.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-log = "0.1.3"
tracing.workspace = true
url.workspace = true

[dev-dependencies]
assert_fs = "1.0.10"
dojo-test-utils = { path = "../dojo-test-utils", features = [ "build-examples" ] }
snapbox = "0.4.6"
